# ds_project-

./: CMakeLists.txt  README.md  REAME.md  build.sh  main.cpp
include/: sw_conv_implicit.h  swbatchnorm.h  swcommon.h  swim2col.h  swlstm.h  swsoftmax.h  swtensortrans.h  swwinogradconv.h
slave/col2im/: sw_slave_col2im.c  sw_slave_col2im_stride.c
slave/im2col/: README.md  sw_slave_im2col.c  sw_slave_im2col_stride.c  sw_slave_im2col_stride_zero.c  sw_slave_im2col_stride_zero_batch.c  sw_slave_im2col_stride_zero_batch_trans.c
slave/implicit_conv/: sw_slave_conv_batch_full.c  sw_slave_conv_batch_full_pad.c  sw_slave_conv_batch_full_pad_float.c  sw_slave_conv_batch_full_pad_float_v2.c  sw_slave_conv_batch_pad.c  sw_slave_conv_batch_pad_float.c  sw_slave_conv_batch_pad_float2double.c  sw_slave_conv_batch_valid.c  sw_slave_conv_image_opt_valid.c  sw_slave_conv_image_valid.c
slave/pooling/: sw_slave_pool.c
slave/scale/: sw_slave_scale.c
slave/softmax/: sw_slave_softmax.c
slave/winograd/: sw_slave_filtertrans.c  sw_slave_inputtrans.c  sw_slave_inputtrans_256.c  sw_slave_inputtrans_Ni512.c  sw_slave_outputtrans.c
src/: sw_conv_implicit.c  sw_winograd_conv.c  swcommon.c  swim2col.c  swlstm.c  swscale.c  swsoftmax.c  swtensortrans.c
unitest/include/: conv_layer_impl.hpp  conv_layer_impl_v2.hpp  test_bias.h  test_im2col.h  test_lstm.h  test_softmax.h  test_winograd.h
unitest/src/: test_batchnorm.c  test_bias.c  test_col2im.c  test_conv_implicit.cpp  test_im2col.c  test_im2col_zeropad.c  test_im2col_zeropad_batch.c  test_im2col_zeropad_trans_batch.c  test_lstm.c  (+4 more)
